test/must_fail/api/must_fail_delay_ms.ngjs
#!/usr/bin/env ngspicejs
// delay_ms wants number
// linter: ngspicejs-lint
"use strict";

delay_ms('asdf');
